fix owasp tests running behind login

--- a/src/zap.conf
+++ b/src/zap.conf
@@ -78,6 +78,8 @@
 10062	FAIL	(PII Disclosure - Passive/beta)
 10095	FAIL	(Backup File Disclosure - Active/beta)
 10096	FAIL	(Timestamp Disclosure - Passive/release)
+# We have timestamps on the main page for sorting applications
+10096	OUTOFSCOPE	http://app:8080.*
 10097	FAIL	(Hash Disclosure - Passive/beta)
 10098	FAIL	(Cross-Domain Misconfiguration - Passive/release)
 10104	FAIL	(User Agent Fuzzer - Active/beta)
