--- a/src/zap.conf
+++ b/src/zap.conf
@@ -53,6 +53,7 @@
 10038	OUTOFSCOPE	http://app:8080/users/add
 10038	OUTOFSCOPE	http://app:8080/delete
 10038	OUTOFSCOPE	http://app:8080/withdraw 
+10038	OUTOFSCOPE	http://app:8080/withdrawconfirmed 
 # This URL always returns 404, so include it as well.
 10038	OUTOFSCOPE	http://app:8080/todo
 # OIDC isn't configured in the test environment and DEBUG=True so this gives a 500 without CSP headers
