Fix more test failures

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -7,6 +7,8 @@ strict_optional = True
 # implicit_optional: treat arguments a None default value as implicitly Optional?
 # `var: int = None` is equal to `var: Optional[int] = None`
 implicit_optional = True
+# we'd still like mypy to succeed when 3rd party libraries are not installed
+ignore_missing_imports = True
 
 [mypy.plugins.django-stubs]
 django_settings_module = "registrar.config.settings"
