--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -23,8 +23,8 @@ jobs:
   deploy:
     if: | 
       ${{startsWith(github.head_ref, 'ik/')
-        || startsWith(github.head_ref, 'rjm')
-        || startsWith(github.head_ref, 'jon')
+        || startsWith(github.head_ref, 'rjm/')
+        || startsWith(github.head_ref, 'jon/')
         || startsWith(github.head_ref, 'sspj/')
         || startsWith(github.head_ref, 'mr/')
         || startsWith(github.head_ref, 'nmb/')
