--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -5,18 +5,18 @@ run-name: Build and deploy developer sandbox for branch ${{ github.head_ref }}
 
 on:
   pull_request:
-    branches:
-      - 'ik/**'
-      - 'rjm/**'
-      - 'jon/**'
-      - 'sspj/**'
-      - 'mr/**'
-      - 'nmb/**'
-      - 'ab/**'
-      - 'bl/**'
 
 jobs:
   variables: 
+    if: | 
+      startsWith(github.head_ref, 'ik/')
+        || startsWith(github.head_ref, 'jon')
+        || startsWith(github.head_ref, 'sspj/')
+        || startsWith(github.head_ref, 'mr/')
+        || startsWith(github.head_ref, 'nmb/')
+        || startsWith(github.head_ref, 'ab/')
+        || startsWith(github.head_ref, 'bl/')
+        || startsWith(github.head_ref, 'rjm/')
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
