update node container to use node.dockerfile to set browsers and avoid puppeteer crash

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -62,6 +62,9 @@ services:
       - POSTGRES_PASSWORD=feedabee
 
   node:
+    build:
+      context: .
+      dockerfile: node.Dockerfile
     image: node
     volumes:
       - .:/app
