--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,6 +32,15 @@ jobs:
         working-directory: ./src
         run: docker compose run app python manage.py test
 
+  django-migrations-complete:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Check complete migrations
+        working-directory: ./src
+        run: docker compose run app python manage.py makemigrations --check
+
   pa11y-scan:
     runs-on: ubuntu-20.04
     steps:
