--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,5 +53,6 @@ jobs:
       - name: run pa11y
         working-directory: ./src
         run: |
+          sleep 10;
           npm i -g pa11y-ci
           pa11y-ci 
