Fix migration test to give more information

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,9 +37,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Check complete migrations
+      - name: Check for complete migrations
         working-directory: ./src
-        run: docker compose run app python manage.py makemigrations --check
+        run:  |
+          docker compose run app ./manage.py makemigrations --dry-run --verbosity 3 && \
+          docker compose run app ./manage.py makemigrations --check
 
   pa11y-scan:
     runs-on: ubuntu-20.04
