--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,17 +1,17 @@
 -i https://pypi.python.org/simple
 asgiref==3.6.0 ; python_version >= '3.7'
-boto3==1.26.69
-botocore==1.29.69 ; python_version >= '3.7'
+boto3==1.26.85
+botocore==1.29.85 ; python_version >= '3.7'
 cachetools==5.3.0
 certifi==2022.12.7 ; python_version >= '3.6'
 cfenv==0.5.3
 cffi==1.15.1
-charset-normalizer==3.0.1 ; python_version >= '3.6'
-cryptography==39.0.1 ; python_version >= '3.6'
+charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
+cryptography==39.0.2 ; python_version >= '3.6'
 defusedxml==0.7.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 dj-database-url==1.2.0
 dj-email-url==1.0.6
-django==4.1.6
+django==4.1.7
 django-allow-cidr==0.6.0
 django-auditlog==2.2.2
 django-cache-url==3.4.4
@@ -20,30 +20,33 @@ django-fsm==2.8.1
 django-phonenumber-field[phonenumberslite]==7.0.2
 django-widget-tweaks==1.4.12
 environs[django]==9.5.0
-faker==17.0.0
+faker==17.6.0
+git+https://github.com/cisagov/epplib.git@sspj#egg=fred-epplib
 furl==2.1.3
 future==0.18.3 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gunicorn==20.1.0
 idna==3.4 ; python_version >= '3.5'
 jmespath==1.0.1 ; python_version >= '3.7'
+lxml==4.9.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 mako==1.2.4 ; python_version >= '3.7'
 markupsafe==2.1.2 ; python_version >= '3.7'
 marshmallow==3.19.0 ; python_version >= '3.7'
 oic==1.5.0
 orderedmultidict==1.0.1
 packaging==23.0 ; python_version >= '3.7'
-phonenumberslite==8.13.6
+phonenumberslite==8.13.7
 psycopg2-binary==2.9.5
 pycparser==2.21
 pycryptodomex==3.17
 pyjwkest==1.4.2
 python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==0.21.1 ; python_version >= '3.7'
+python-dotenv==1.0.0 ; python_version >= '3.8'
 requests==2.28.2
 s3transfer==0.6.0 ; python_version >= '3.7'
-setuptools==67.2.0 ; python_version >= '3.7'
+setuptools==67.5.1 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.3 ; python_version >= '3.5'
-typing-extensions==4.4.0 ; python_version >= '3.7'
+transitions==0.9.0
+typing-extensions==4.5.0 ; python_version >= '3.7'
 urllib3==1.26.14 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-whitenoise==6.3.0
+whitenoise==6.4.0
