--- a/.github/workflows/security-check.yaml
+++ b/.github/workflows/security-check.yaml
@@ -4,9 +4,15 @@ on:
   push:
     paths-ignore:
       - 'docs/**'
+      - '**.md'
+      - '.gitignore'
     branches:
       - main
   pull_request:
+    paths-ignore:
+      - 'docs/**'
+      - '**.md'
+      - '.gitignore'
     branches:
       - main
 
