Add a unit test for new template tag

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       # Tell Django where it is being hosted
       - DJANGO_BASE_URL=http://localhost:8080
       # Public site URL link
-      - GETGOV_PUBLIC_SITE_URL="https://beta.get.gov"
+      - GETGOV_PUBLIC_SITE_URL=https://beta.get.gov
       # Set a username for accessing the registry
       - REGISTRY_CL_ID=nothing
       # Set a password for accessing the registry
