title must be a non-empty string

--- a/.github/ISSUE_TEMPLATE/issue-default.yml
+++ b/.github/ISSUE_TEMPLATE/issue-default.yml
@@ -1,6 +1,6 @@
 name: Issue
 description: Provide a title for the issue you are describing 
-title: ""
+title: "Please provide a clear title"
 labels: ["review"]
 # assignees:
 #   - kitsushadow
