--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -45,6 +45,6 @@ s3transfer==0.6.1 ; python_version >= '3.7'
 setuptools==67.8.0 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.4 ; python_version >= '3.5'
-typing-extensions==4.6.2 ; python_version < '3.11'
+typing-extensions==4.6.2
 urllib3==1.26.16 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 whitenoise==6.4.0
