Add epplib dependency

--- a/src/Pipfile
+++ b/src/Pipfile
@@ -23,6 +23,7 @@ requests = "*"
 django-fsm = "*"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 boto3 = "*"
+fred-epplib = {git = "https://github.com/cisagov/epplib.git", ref = "master"}
 
 [dev-packages]
 django-debug-toolbar = "*"
