--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -21,11 +21,13 @@ django-phonenumber-field[phonenumberslite]==7.0.2
 django-widget-tweaks==1.4.12
 environs[django]==9.5.0
 faker==17.0.0
+git+https://github.com/cisagov/epplib.git@master#egg=fred-epplib
 furl==2.1.3
 future==0.18.3 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gunicorn==20.1.0
 idna==3.4 ; python_version >= '3.5'
 jmespath==1.0.1 ; python_version >= '3.7'
+lxml==4.9.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 mako==1.2.4 ; python_version >= '3.7'
 markupsafe==2.1.2 ; python_version >= '3.7'
 marshmallow==3.19.0 ; python_version >= '3.7'
