--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,7 @@
 -i https://pypi.python.org/simple
 asgiref==3.7.2 ; python_version >= '3.7'
-boto3==1.26.144
-botocore==1.29.144 ; python_version >= '3.7'
+boto3==1.26.145
+botocore==1.29.145 ; python_version >= '3.7'
 cachetools==5.3.1
 certifi==2023.5.7 ; python_version >= '3.6'
 cfenv==0.5.3
@@ -17,6 +17,7 @@ django-auditlog==2.3.0
 django-cache-url==3.4.4
 django-csp==3.7
 django-fsm==2.8.1
+django-login-required-middleware==0.9.0
 django-phonenumber-field[phonenumberslite]==7.1.0
 django-widget-tweaks==1.4.12
 environs[django]==9.5.0
