--- a/.github/workflows/security-check.yaml
+++ b/.github/workflows/security-check.yaml
@@ -72,7 +72,7 @@ jobs:
         # by adding MockUserLogin to settings.MIDDLEWARE
         run: |
           perl -pi \
-          -e 's/"csp.middleware.CSPMiddleware",/$&"registrar.tests.common.MockUserLogin",/' \
+          -e 's/"django.contrib.auth.middleware.AuthenticationMiddleware",/$&"registrar.tests.common.MockUserLogin",/' \
           src/registrar/config/settings.py
         working-directory: ./src
 
