--- a/.github/ISSUE_TEMPLATE/user-story.yml
+++ b/.github/ISSUE_TEMPLATE/user-story.yml
@@ -19,7 +19,7 @@ body:
         If more than one "as a, I want, so that" describes the story, add multiple. 
         
         Example:
-        As an administrator
+        As an analyst
         I want the ability to approve a domain application
         so that a request can be fulfilled and a new .gov domain can be provisioned
       value: |
@@ -33,16 +33,16 @@ body:
     attributes:
       label: Acceptance Criteria
       description: |
-        Please add the acceptance criteria using one or more "given, when, then" formulae
+        Please add the acceptance criteria that best describe the desired outcomes when this work is completed 
         
         Example:
-        Given that I am an administrator who has finished reviewing a domain application
+        - Application sends an email when analysts approve domain requests
+        - Domain application status is "approved"
+        
+        Example ("given, when, then" format):
+        Given that I am an analyst who has finished reviewing a domain application
         When I click to approve a domain application
         Then the domain provisioning process should be initiated, and the applicant should receive an email update.
-      value: |
-        Given 
-        When 
-        Then
     validations:
       required: true
   - type: textarea
