--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -56,7 +56,7 @@ body:
     id: additional-context
     attributes:
       label: Additional Context (optional)
-      description: "Please include additional references, screenshots, documentation, etc. that are relevant"
+      description: "Please include additional references (screenshots, designs, documentation, etc.) that are relevant"
   - type: textarea
     id: issue-links
     attributes:
