Update bug template description

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,5 +1,5 @@
 name: Bug
-description: Report a problem with the application
+description: Report a bug or problem with the application
 title: ""
 labels: ["bug"]
 
