--- a/.github/ISSUE_TEMPLATE/user-story.yml
+++ b/.github/ISSUE_TEMPLATE/user-story.yml
@@ -1,4 +1,4 @@
-name: User Story
+name: Story
 description: Capture actionable sprint work
 title: ""
 labels: ["story"]
@@ -13,9 +13,9 @@ body:
   - type: textarea
     id: story
     attributes:
-      label: User Story
+      label: Story
       description: |
-        Please add the "as a, I want, so that" details that describe the user story.
+        Please add the "as a, I want, so that" details that describe the story.
         If more than one "as a, I want, so that" describes the story, add multiple. 
         
         Example:
