Review feedback: updated developer documentation

--- a/src/zap.conf
+++ b/src/zap.conf
@@ -87,6 +87,10 @@
 10062	FAIL	(PII Disclosure - Passive/beta)
 10095	FAIL	(Backup File Disclosure - Active/beta)
 10096	FAIL	(Timestamp Disclosure - Passive/release)
+# Our sortable table of domains uses timestamps as sort keys so this appears as
+# a false-positive to the OWASP scanner
+10096	OUTOFSCOPE	http://app:8080
+10096	OUTOFSCOPE	http://app:8080/
 10097	FAIL	(Hash Disclosure - Passive/beta)
 10098	FAIL	(Cross-Domain Misconfiguration - Passive/release)
 10104	FAIL	(User Agent Fuzzer - Active/beta)
