--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -17,6 +17,7 @@ jobs:
         || startsWith(github.head_ref, 'ab/')
         || startsWith(github.head_ref, 'bl/')
         || startsWith(github.head_ref, 'rjm/')
+        || startsWith(github.head_ref, 'rb/')
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
