Use fsm_admin to make admin classes aware of the fsm, hack settings to make the package work with our current version of django, test the in review email in test_models

--- a/src/Pipfile
+++ b/src/Pipfile
@@ -21,6 +21,7 @@ django-widget-tweaks = "*"
 cachetools = "*"
 requests = "*"
 django-fsm = "*"
+django-fsm-admin = "*"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 boto3 = "*"
 typing-extensions ='*'
