--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,7 @@
 -i https://pypi.python.org/simple
 asgiref==3.7.2 ; python_version >= '3.7'
-boto3==1.26.145
-botocore==1.29.145 ; python_version >= '3.7'
+boto3==1.26.152
+botocore==1.29.152 ; python_version >= '3.7'
 cachetools==5.3.1
 certifi==2023.5.7 ; python_version >= '3.6'
 cfenv==0.5.3
@@ -11,17 +11,18 @@ cryptography==41.0.1 ; python_version >= '3.7'
 defusedxml==0.7.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 dj-database-url==2.0.0
 dj-email-url==1.0.6
-django==4.2.1
+django==4.2.2
 django-allow-cidr==0.6.0
 django-auditlog==2.3.0
 django-cache-url==3.4.4
 django-csp==3.7
 django-fsm==2.8.1
+django-fsm-admin==1.2.5
 django-login-required-middleware==0.9.0
 django-phonenumber-field[phonenumberslite]==7.1.0
 django-widget-tweaks==1.4.12
 environs[django]==9.5.0
-faker==18.10.0
+faker==18.10.1
 git+https://github.com/cisagov/epplib.git@f818cbf0b069a12f03e1d72e4b9f4900924b832d#egg=fred-epplib
 furl==2.1.3
 future==0.18.3 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -30,7 +31,7 @@ idna==3.4 ; python_version >= '3.5'
 jmespath==1.0.1 ; python_version >= '3.7'
 lxml==4.9.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 mako==1.2.4 ; python_version >= '3.7'
-markupsafe==2.1.2 ; python_version >= '3.7'
+markupsafe==2.1.3 ; python_version >= '3.7'
 marshmallow==3.19.0 ; python_version >= '3.7'
 oic==1.6.0
 orderedmultidict==1.0.1
@@ -39,7 +40,7 @@ phonenumberslite==8.13.13
 psycopg2-binary==2.9.6
 pycparser==2.21
 pycryptodomex==3.18.0
-pydantic==1.10.8 ; python_version >= '3.7'
+pydantic==1.10.9 ; python_version >= '3.7'
 pyjwkest==1.4.2
 python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.0 ; python_version >= '3.8'
