--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -18,6 +18,7 @@ jobs:
         || startsWith(github.head_ref, 'bl/')
         || startsWith(github.head_ref, 'rjm/')
         || startsWith(github.head_ref, 'ko/')
+        || startsWith(github.head_ref, 'gd/')
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
