--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -43,7 +43,7 @@ body:
   - type: textarea
     id: environment
     attributes:
-      label: Environment (optional)
+      label: Environment
       description: |
         Where is this issue occurring? If related to development environment, list the relevant tool versions.
         
@@ -54,12 +54,12 @@ body:
   - type: textarea
     id: additional-context
     attributes:
-      label: Additional Context (optional)
+      label: Additional Context
       description: "Please include additional references (screenshots, design links, documentation, etc.) that are relevant"
   - type: textarea
     id: issue-links
     attributes:
-      label: Issue Links (optional)
+      label: Issue Links
       description: |
         What other issues does this story relate to and how?
         
