update from main, add optional removal from brandon, and fix title

--- a/.github/ISSUE_TEMPLATE/issue-default.yml
+++ b/.github/ISSUE_TEMPLATE/issue-default.yml
@@ -25,9 +25,9 @@ body:
   - type: textarea
     id: issue-links
     attributes:
-      label: Issue Links (optional)
+      label: Issue Links
       description: |
-        Does this issue relate to any other existing work?
+        What other issues does this story relate to and how?
         
         Example:
         - 🚧 Blocked by: #123
