--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -16,6 +16,7 @@ jobs:
         || startsWith(github.head_ref, 'ko/')
         || startsWith(github.head_ref, 'gd/')
         || startsWith(github.head_ref, 'za/')
+        || startsWith(github.head_ref, 'nl/')
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
