--- a/src/zap.conf
+++ b/src/zap.conf
@@ -30,6 +30,8 @@
 # UNCLEAR WHY THIS ONE IS FAILING. Giving 404 error.
 10027	OUTOFSCOPE	http://app:8080/public/js/uswds-init.min.js
 # get-gov.js contains suspicious word "from" as in `Array.from()`
+10027 OUTOFSCOPE http://app:8080/public/src/registrar/templates/home.html
+# Contains suspicious word "TODO" which isn't that suspicious
 10027	OUTOFSCOPE	http://app:8080/public/js/get-gov.js
 10028	FAIL	(Open Redirect - Passive/beta)
 10029	FAIL	(Cookie Poisoning - Passive/beta)
