--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -24,6 +24,7 @@ on:
           - ab
           - bl
           - rjm
+          - dk
 
 jobs:
   migrate:
@@ -37,6 +38,6 @@ jobs:
         with:
           cf_username: ${{ secrets[env.CF_USERNAME] }}
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
-          cf_org: cisa-getgov-prototyping
+          cf_org: cisa-dotgov
           cf_space: ${{ github.event.inputs.environment }}
           full_command: "cf run-task getgov-${{ github.event.inputs.environment }} --command 'python manage.py migrate' --name migrate"
