--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -54,6 +54,7 @@ services:
     # command: "python"
     command: >
       bash -c " python manage.py migrate &&
+      python manage.py load &&
       python manage.py runserver 0.0.0.0:8080"
 
   db:
