--- a/ops/scripts/manifest-sandbox-template.yaml
+++ b/ops/scripts/manifest-sandbox-template.yaml
@@ -7,10 +7,11 @@ applications:
   instances: 1
   memory: 512M
   stack: cflinuxfs4
-  timeout: 280
+  timeout: 180
   command: ./run.sh
   health-check-type: http
   health-check-http-endpoint: /health
+  health-check-invocation-timeout: 30
   env:
     # Send stdout and stderr straight to the terminal without buffering
     PYTHONUNBUFFERED: yup
