--- a/.github/ISSUE_TEMPLATE/issue-default.yml
+++ b/.github/ISSUE_TEMPLATE/issue-default.yml
@@ -1,32 +1,36 @@
 name: Issue
-description: Capture uncategorized work or content
+description: Describe an idea, feature, content, or non-bug finding
 
 body:
   - type: markdown
-    id: help
+    id: title-help
     attributes:
       value: |
         > Titles should be short, descriptive, and compelling.
   - type: textarea
-    id: issue
+    id: issue-description
     attributes:
       label: Issue description and context
       description: |
-        Describe the issue so that someone who wasn't present for its discovery can understand the problem and why it matters. Use full sentences, plain language, and good [formatting](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax – links and images welcome! Share desired outcomes or potential next steps.
+        Describe the issue so that someone who wasn't present for its discovery can understand the problem and why it matters. Use full sentences, plain language, and good [formatting](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax). Share desired outcomes or potential next steps. Images or links to other content/context (like documents or Slack discussion) are welcome.
     validations:
       required: true
   - type: textarea
     id: acceptance-criteria
     attributes:
       label: Acceptance criteria
-      description: "If known, share 1-3 statements that would need to be true for this issue to be considered resolved. Use a checklist."
+      description: "If known, share 1-3 statements that would need to be true for this issue to be considered resolved. Use a [task list](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/about-task-lists#creating-task-lists) if appropriate."
+      value: - [ ]
   - type: textarea
-    id: issue-links
+    id: links-to-other-issues
     attributes:
-      label: Other issues
+      label: Links to other issues
       description: |
-        Add the issue number of other issues this relates to and how.
-        
-        Example:
-        - 🚧 Blocks/is blocked by #123
-        - 🔄 Relates to #234
+        Add the issue number of other issues this relates to and how (blocks, is blocked by, relates to).
+      placeholder: relates to #123
+  - type: textarea
+    id: note
+    attributes:
+      label: Note
+      description: |
+        We may edit this issue's text to document our understanding and clarify the product work.
