--- a/.github/ISSUE_TEMPLATE/issue-default.yml
+++ b/.github/ISSUE_TEMPLATE/issue-default.yml
@@ -12,7 +12,7 @@ body:
     attributes:
       label: Issue description and context
       description: |
-        Describe the issue so that someone who wasn't present for its discovery can understand the problem and why it matters. Use full sentences, plain language, and good [formatting](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax). Share desired outcomes or potential next steps. Images or links to other content/context (like documents or Slack discussion) are welcome.
+        Describe the issue so that someone who wasn't present for its discovery can understand the problem and why it matters. Use full sentences, plain language, and good [formatting](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax). Share desired outcomes or potential next steps. Images or links to other content/context (like documents or Slack discussions) are welcome.
     validations:
       required: true
   - type: textarea
@@ -25,8 +25,8 @@ body:
     attributes:
       label: Links to other issues
       description: |
-        Add the issue number of other issues this relates to and how (blocks, is blocked by, relates to).
-      placeholder: Relates to...
+        "Add the issue #number of other issues this relates to and how (e.g., 🚧 Blocks, ⛔️ Is blocked by, 🔄 Relates to)."
+      placeholder: 🔄 Relates to... 
   - type: markdown
     id: note
     attributes:
