--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,53 +1,61 @@
 -i https://pypi.python.org/simple
-asgiref==3.7.2 ; python_version >= '3.7'
-boto3==1.26.145
-botocore==1.29.145 ; python_version >= '3.7'
-cachetools==5.3.1
-certifi==2023.7.22 ; python_version >= '3.6'
+annotated-types==0.6.0; python_version >= '3.8'
+asgiref==3.7.2; python_version >= '3.7'
+boto3==1.28.62; python_version >= '3.7'
+botocore==1.31.62; python_version >= '3.7'
+cachetools==5.3.1; python_version >= '3.7'
+certifi==2023.7.22; python_version >= '3.6'
 cfenv==0.5.3
-cffi==1.15.1
-charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
-cryptography==41.0.4 ; python_version >= '3.7'
-defusedxml==0.7.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-dj-database-url==2.0.0
+cffi==1.16.0; python_version >= '3.8'
+charset-normalizer==3.3.0; python_full_version >= '3.7.0'
+cryptography==41.0.4; python_version >= '3.7'
+defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+dj-database-url==2.1.0
 dj-email-url==1.0.6
-django==4.2.3
-django-allow-cidr==0.6.0
-django-auditlog==2.3.0
+django==4.2.6; python_version >= '3.8'
+django-allow-cidr==0.7.1
+django-auditlog==2.3.0; python_version >= '3.7'
 django-cache-url==3.4.4
 django-csp==3.7
 django-fsm==2.8.1
 django-login-required-middleware==0.9.0
-django-phonenumber-field[phonenumberslite]==7.1.0
-django-widget-tweaks==1.4.12
-environs[django]==9.5.0
-faker==18.10.0
-git+https://github.com/cisagov/epplib.git@d56d183f1664f34c40ca9716a3a9a345f0ef561c#egg=fred-epplib
+django-phonenumber-field[phonenumberslite]==7.2.0; python_version >= '3.8'
+django-widget-tweaks==1.5.0; python_version >= '3.8'
+environs[django]==9.5.0; python_version >= '3.6'
+faker==19.9.0; python_version >= '3.8'
+fred-epplib@ git+https://github.com/cisagov/epplib.git@d56d183f1664f34c40ca9716a3a9a345f0ef561c
 furl==2.1.3
-future==0.18.3 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-gunicorn==20.1.0
-idna==3.4 ; python_version >= '3.5'
-jmespath==1.0.1 ; python_version >= '3.7'
-lxml==4.9.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-mako==1.2.4 ; python_version >= '3.7'
-markupsafe==2.1.2 ; python_version >= '3.7'
-marshmallow==3.19.0 ; python_version >= '3.7'
-oic==1.6.0
+future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+gevent==23.9.1; python_version >= '3.8'
+greenlet==3.0.0; python_version < '3.11' and platform_python_implementation == 'CPython'
+gsocketpool==0.1.6
+gunicorn==21.2.0; python_version >= '3.5'
+idna==3.4; python_version >= '3.5'
+jmespath==1.0.1; python_version >= '3.7'
+lxml==4.9.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+mako==1.2.4; python_version >= '3.7'
+markupsafe==2.1.3; python_version >= '3.7'
+marshmallow==3.20.1; python_version >= '3.8'
+oic==1.6.1; python_version ~= '3.7'
 orderedmultidict==1.0.1
-packaging==23.1 ; python_version >= '3.7'
-phonenumberslite==8.13.13
-psycopg2-binary==2.9.6
+packaging==23.2; python_version >= '3.7'
+phonenumberslite==8.13.22
+psycopg2-binary==2.9.9; python_version >= '3.7'
 pycparser==2.21
-pycryptodomex==3.18.0
-pydantic==1.10.8 ; python_version >= '3.7'
+pycryptodomex==3.19.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+pydantic==2.4.2; python_version >= '3.7'
+pydantic-core==2.10.1; python_version >= '3.7'
+pydantic-settings==2.0.3; python_version >= '3.7'
 pyjwkest==1.4.2
-python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==1.0.0 ; python_version >= '3.8'
-requests==2.31.0
-s3transfer==0.6.1 ; python_version >= '3.7'
-setuptools==67.8.0 ; python_version >= '3.7'
-six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlparse==0.4.4 ; python_version >= '3.5'
-typing-extensions==4.6.3
-urllib3==1.26.17 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-whitenoise==6.4.0
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dotenv==1.0.0; python_version >= '3.8'
+requests==2.31.0; python_version >= '3.7'
+s3transfer==0.7.0; python_version >= '3.7'
+setuptools==68.2.2; python_version >= '3.8'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sqlparse==0.4.4; python_version >= '3.5'
+typing-extensions==4.8.0; python_version >= '3.8'
+urllib3==2.0.6; python_version >= '3.7'
+whitenoise==6.6.0; python_version >= '3.8'
+zope.event==5.0; python_version >= '3.7'
+zope.interface==6.1; python_version >= '3.7'
