--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -22,13 +22,13 @@ django-login-required-middleware==0.9.0
 django-phonenumber-field[phonenumberslite]==7.2.0; python_version >= '3.8'
 django-widget-tweaks==1.5.0; python_version >= '3.8'
 environs[django]==9.5.0; python_version >= '3.6'
-faker==19.9.0; python_version >= '3.8'
+faker==19.10.0; python_version >= '3.8'
 fred-epplib@ git+https://github.com/cisagov/epplib.git@d56d183f1664f34c40ca9716a3a9a345f0ef561c
 furl==2.1.3
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
+geventconnpool@ git+https://github.com/zandercymatics/geventconnpool.git@e4f349117875fa70b1034b89c3bc7caafac6a9b4
 greenlet==3.0.0; python_version < '3.11' and platform_python_implementation == 'CPython'
-gsocketpool==0.1.6
 gunicorn==21.2.0; python_version >= '3.5'
 idna==3.4; python_version >= '3.5'
 jmespath==1.0.1; python_version >= '3.7'
