Migration change, script work

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,4 @@ src/migrationdata/20231009.domaintypes.adhoc.dotgov.txt
 src/migrationdata/20231009.domainadditionaldatalink.adhoc.dotgov.txt
 src/migrationdata/20231009.agency.adhoc.dotgov.txt
 src/migrationdata/20231009.organization.adhoc.dotgov.txt
+src/migrationdata/20231009.organization.adhoc.dotgov.txt
