--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -60,6 +60,7 @@ jobs:
           sudo mv cf /usr/local/bin
 
       - name: Set login credentials
+        uses: 18f/cg-deploy-action@main
         env:
           ENVIRONMENT: ${{ needs.variables.outputs.environment }}
           CF_USERNAME: CF_${{ needs.variables.outputs.environment }}_USERNAME
